deps/v8/test/message/fail/strict-formal-parameters.out
*%(basename)s:6: SyntaxError: Duplicate parameter name not allowed in this context
function foo(b, a, a, d) { return a }
                   ^
SyntaxError: Duplicate parameter name not allowed in this context
